force-app/main/default/objects/ampi__Organization_Role__c/ampi__Organization_Role__c.object-meta.xml
<CustomObject>
    <description>The Organization Role object connects Account and Project and allows users to indicate what role an organization played in a particular project  e.g recognizing an organization&apos;s role as a donor to a project.</description>
    <label>Organization Role</label>
    <nameField>
        <label>Organization Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>