force-app/main/default/objects/ampi__Organization_Role__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who Advises on this Agreement on behalf of the Funding Opportunity/Funder.</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>