force-app/main/default/objects/ampi__Organization_Role__c/fields/ampi__IATI_Providing_Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Providing_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Project which is providing funds to another Project</description>
    <label>IATI Providing Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Organization Roles (IATI Receiving Project)</relationshipLabel>
    <relationshipName>IATI_Receiving_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>