force-app/main/default/objects/ampi__Organization_Role__c/fields/ampi__IATI_Role_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Role_Code__c</fullName>
    <description>Formula field that allocates a code based on the Role</description>
    <formula>CASE (ampi__Role__c,&quot;Funding&quot;,1,
&quot;Accountable&quot;,2,
&quot;Extending&quot;,3,
&quot;Implementing&quot;,4,null)</formula>
    <inlineHelpText>Code that corresponds to the Role</inlineHelpText>
    <label>IATI Role Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>