force-app/main/default/objects/ampi__Organization_Role__c/fields/ampi__Organization__c.field-meta.xml
<CustomField>
    <fullName>ampi__Organization__c</fullName>
    <description>Master-detail field looking up to Account object</description>
    <inlineHelpText>Select the organization that this record is related to.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Roles</relationshipLabel>
    <relationshipName>Organization_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>