force-app/main/default/objects/ampi__Organization_Role__c/fields/ampi__Organization_Activity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ampi__Organization_Activity_Identifier__c</fullName>
    <description>The IATI standard allows for the recording of information on all organizations that participate in any part of the lifecycle of an aid activity: inter alia donors, beneficiaries, extending and implementing agencies.</description>
    <inlineHelpText>Enter information on all organizations that participate in any part of the lifecycle of an aid activity here</inlineHelpText>
    <label>Organization Activity Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>