force-app/main/default/objects/ampi__Organization_Role__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <description>Master-detail looking up to the Project object.</description>
    <inlineHelpText>Select the project that this record is related to.</inlineHelpText>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Organization Roles</relationshipLabel>
    <relationshipName>Organization_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>