force-app/main/default/objects/ampi__Organization_Role__c/fields/ampi__Role__c.field-meta.xml
<CustomField>
    <fullName>ampi__Role__c</fullName>
    <description>Picklist tracking the role that an organization played in an activity.</description>
    <inlineHelpText>Select a role that an organization played in an activity.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Accountable</fullName>
            </value>
            <value>
                <fullName>Extending</fullName>
            </value>
            <value>
                <fullName>Implementing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>