force-app/main/default/objects/ampi__Organization_Role__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Comments on the Review and Approval process of this Agreement. You can find an overview of past Comments in the Agreement History Tab and the Chatter Feed.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>