force-app/main/default/objects/ampi__Organization_Role__c/fields/Funder_Info__c.field-meta.xml
<CustomField>
    <fullName>Funder_Info__c</fullName>
    <formula>CASE(ampi__Project__r.RecordType.DeveloperName, 
&quot;Humanitarian_Appeal&quot;, &quot;Humanitarian Appeal&quot;,
&quot;Funding_Opportunity&quot;, &quot;Funding Opportunity&quot;,
&quot;Grant&quot;,&quot;Grant&quot;,
&quot;&quot; ) &amp;
IF(ampi__Project__r.RecordType.DeveloperName = &quot;Funding_Opportunity&quot;, &quot;&quot;, &quot;/&quot; &amp; TEXT( ampi__Project__r.ampi__Project_Status__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Info</label>
    <type>Text</type>
</CustomField>