force-app/main/default/objects/ampi__Organization_Role__c/fields/Implementing_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Organisation__c</fullName>
    <formula>ampi__IATI_Providing_Project__r.SOS_Implementing_Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Implementing Organisation of the Funded Project</inlineHelpText>
    <label>Implementing Organisation</label>
    <type>Text</type>
</CustomField>