force-app/main/default/objects/ampi__Organization_Role__c/fields/Planned_Implementation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Implementation_End_Date__c</fullName>
    <formula>ampi__IATI_Providing_Project__r.Planned_Implementation_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned (Implementation) End Date of the Funded Project</inlineHelpText>
    <label>Planned (Implementation) End Date</label>
    <type>Date</type>
</CustomField>