force-app/main/default/objects/ampi__Organization_Role__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>TEXT( ampi__IATI_Providing_Project__r.ampi__Project_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of Recipient Project</inlineHelpText>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>