force-app/main/default/objects/ampi__Organization_Role__c/fields/Project_Team_Site_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Site_Link__c</fullName>
    <formula>ampi__IATI_Providing_Project__r.SharePoint_Team_Site_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Sharepoint Team Site of the Recipient Project</inlineHelpText>
    <label>Project Team Site Link</label>
    <type>Text</type>
</CustomField>