force-app/main/default/objects/ampi__Organization_Role__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>ampi__IATI_Providing_Project__r.SOS_Implementing_Organisation__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Region where the Funded Project is implemented</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>