force-app/main/default/objects/ampi__Organization_Role__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User that is Reviewing this Agreement.</inlineHelpText>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>