force-app/main/default/objects/ampi__Organization_Role__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>(Exact list of statuses to be confirmed)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Formulation</fullName>
                <default>true</default>
                <label>In Formulation</label>
            </value>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Request for Revision Submitted</fullName>
            </value>
            <value>
                <fullName>Decision in Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
                <isActive>false</isActive>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <isActive>false</isActive>
                <label>Suspended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>