force-app/main/default/objects/ampi__Organization_Role__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who submitted the Application for this Agreement</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>