force-app/main/default/objects/ampi__Organization_Role__c/recordTypes/Organisational_Role.recordType-meta.xml
<RecordType>
    <fullName>Organisational_Role</fullName>
    <active>true</active>
    <label>Organisational Role</label>
</RecordType>