force-app/main/default/objects/ampi__Organization_Role__c/listViews/All_Emergency_Projects_with_IPD_funding.listView-meta.xml
<ListView>
    <fullName>All_Emergency_Projects_with_IPD_funding</fullName>
    <columns>ampi__IATI_Providing_Project__c</columns>
    <columns>Project_Status__c</columns>
    <columns>ampi__Project__c</columns>
    <columns>Funder_Info__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Funding_Amount__c</columns>
    <columns>NAME</columns>
    <columns>ampi__Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funder_Info__c</field>
        <operation>contains</operation>
        <value>Grant</value>
    </filters>
    <label>All Emergency Projects with IPD funding</label>
</ListView>